Fix spacing on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -111,7 +111,6 @@ main {
 }
 
 .color-picker {
-  margin-top: 72px;
   min-width: 350px;
 }
 
